hphp/test/zend/good/ext/mysqli/tests/bug38003.php.expectf

Fatal error: Access level to DB::__construct() must be public (as in class mysqli) or weaker in %s/bug38003.php on line 3
